# SAMUAPP

./: .env.production  .gitignore  .gitlab-ci.yml  .replit  APK_BUILD_GUIDE.md  APP_UPDATE_GUIDE.md  BUILD_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  GITHUB_DEPLOY.md  LICENSE  MOBILE_BUILD_GUIDE.md  README.md  README_MOBILE_DEPLOY.md  SIMPLE_DEPLOY_GUIDE.md  admin-sql-commands.md  build-android.sh  build-fix.md  build-mobile.bat  build-mobile.sh  capacitor.config.json  capacitor.config.ts  create-mobile-package.sh  ionic.config.json  ionic.config.json.backup  package-lock.json  package.json  replit.md  tailwind.config.ts  test-r2-upload.js  tsconfig.ci.json  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/: agent_assets_metadata.toml
android/: build.gradle  gradle.properties  variables.gradle
attached_assets/: Pasted---1771062547940_1771062547941.txt  Pasted--13-36-20-Shell-command-exited-with-exit-status-1-instead-of-0-Downloading-https-services-grad-1752500319287_1752500319287.txt  Pasted--Opened-client-src-pages-home-tsx-Opened-client-src-pages--1752394729324_1752394729325.txt  Pasted--Privy-docs-home-pagedark-logo-Search-Navigation-Solana-Send-a-transaction-To-sponsor-gas-fees-1751162182873_1751162182874.txt  Pasted--Privy-docs-home-pagedark-logo-Search-Navigation-Solana-Send-a-transaction-To-sponsor-gas-fees-1751167846207_1751167846209.txt  (+39 more)
client/: dev-override.js  (+1 more)
contracts/programs/samu-ip-nft/: Cargo.toml  README.md
contracts/programs/samu-ip-nft/src/: lib.rs
contracts/programs/samu-rewards/: Cargo.toml
contracts/programs/samu-rewards/src/: lib.rs
(+189 files in other folders)
