[package]
name = "samu-ip-nft"
version = "0.1.0"
description = "SAMU Meme Incubator - Phase 3 IP Equity cNFT (Compressed NFT) Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "samu_ip_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
