[package]
name = "samu-rewards"
version = "0.1.0"
description = "SAMU Meme Incubator - On-chain Reward Distribution Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "samu_rewards"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
